[MOOSE-212]: fix visible permalink in search cards

--- a/wp-content/themes/core/assets/pcss/cards/post-search-result.pcss
+++ b/wp-content/themes/core/assets/pcss/cards/post-search-result.pcss
@@ -107,10 +107,12 @@
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: 2;
+	overflow: hidden;
 	margin-top: var(--spacer-10) !important;
 	color: var(--color-blue);
 	font-weight: var(--font-weight-bold);
 	text-overflow: ellipsis;
+	word-break: break-all;
 }
 
 /* -----------------------------------------------------------------------
